[package]
edition = "2021"
name = "proc_art"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
clap = {version = "4.2.1", features = ["derive"]}
image = "0.24.6"
indicatif = {version = "0.17.3", features = ["rayon"]}
nalgebra = "0.32.2"
noise = "0.8.2"
palette = "0.6.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rayon = "1.7.0"
tiny-skia = "0.8.3"
